--- a/blog-post.html
+++ b/blog-post.html
@@ -2,28 +2,29 @@
 <html lang="en">
 
 	<head>
-		<title>DevCard - Bootstrap 4 vCard &amp; Portfolio Template For Developers</title>
+		<title>Muhammad Ayoub - Personal Portfolio</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="DevCard Bootstrap 4 Template">
-		<meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-		<link rel="shortcut icon" href="favicon.ico">
+		<meta name="description"
+			content="Hi, Em Muhammad Ayoub self-learned programmer from Faisalabad. I'm a professional web developer specialised in frontend development for complex scalable web apps.
+I am having the expertise and high bug solving skills and could easily get on board with an ongoing project. I have experience in web development languages and frameworks.">
+		<meta name="author" content="Muhammad Ayoub Khan">
+		<link rel="shortcut icon" href="./favicon.ico">
 
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
 		<!-- FontAwesome JS -->
-		<script defer src="assets/fontawesome/js/all.js"></script>
+		<script defer src="./assets/fontawesome/js/all.js"></script>
 
 		<!-- Owl Stylesheets -->
-		<link rel="stylesheet" href="assets/plugins/owlcarousel/assets/owl.carousel.min.css">
-		<link rel="stylesheet" href="assets/plugins/owlcarousel/assets/owl.theme.default.min.css">
-
+		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
 		<!-- Theme CSS -->
-		<link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css">
+		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-3.css">
+		<link rel="stylesheet" href="./assets/css/theme-new.css">
 
 	</head>
 
@@ -31,7 +32,7 @@
 
 		<header class="header text-center">
 			<div class="force-overflow">
-				<h1 class="blog-name pt-lg-4 mb-0"><a href="index-2.html">Simon Doe</a></h1>
+				<h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">M. Ayoub</a></h1>
 
 				<nav class="navbar navbar-expand-lg navbar-dark">
 
@@ -42,17 +43,22 @@
 
 					<div id="navigation" class="collapse navbar-collapse flex-column">
 						<div class="profile-section pt-3 pt-lg-0">
-							<img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image">
+							<img class="profile-image mb-3 rounded-circle mx-auto" src="./assets/images/profile.png" alt="image">
 
-							<div class="bio mb-3">Hi, my name is Simon Doe and I'm a senior software engineer. Welcome to my personal
+							<div class="bio mb-3">Hi, my name is Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
 								website!</div>
 							<!--//bio-->
 							<ul class="social-list list-inline py-2 mx-auto">
-								<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-								<li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-								<li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw"></i></a></li>
-								<li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow fa-fw"></i></a></li>
-								<li class="list-inline-item"><a href="#"><i class="fab fa-codepen fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://twitter.com/AyoubKhan558"><i
+											class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/ayoubkhan558/"><i
+											class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://github.com/ayoubkhan558"><i
+											class="fab fa-github-alt fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://stackoverflow.com/users/9207553/mohammad-ayoub-khan
+"><i class="fab fa-stack-overflow fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://codepen.io/ayoubkhan558"><i
+											class="fab fa-codepen fa-fw"></i></a></li>
 							</ul>
 							<!--//social-list-->
 							<hr>
@@ -61,7 +67,7 @@
 
 						<ul class="navbar-nav flex-column text-left">
 							<li class="nav-item">
-								<a class="nav-link" href="index-2.html"><i class="fas fa-user fa-fw mr-2"></i>About Me</a>
+								<a class="nav-link" href="index.html"><i class="fas fa-user fa-fw mr-2"></i>About Me</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="portfolio.html"><i class="fas fa-laptop-code fa-fw mr-2"></i>Portfolio</a>
@@ -127,8 +133,8 @@
 
 					<div class="blog-post-body">
 						<figure class="blog-banner">
-							<a href="https://made4dev.com/"><img class="img-fluid" src="assets/images/blog/blog-post-banner.jpg"
-									alt="image"></a>
+							<a target="_blank" href="https://made4dev.com/"><img class="img-fluid"
+									src="./assets/images/blog/blog-post-banner.jpg" alt="image"></a>
 							<figcaption class="mt-2 text-center image-caption">Image Credit: <a
 									href="https://made4dev.com/?ref=devblog" target="_blank">made4dev.com (Premium Programming
 									T-shirts)</a></figcaption>
@@ -142,7 +148,8 @@
 							ac, enim. </p>
 
 						<h3 class="mt-5 mb-3">Code Block Example</h3>
-						<p>You can get more info at <a href="https://highlightjs.org/" target="_blank">https://highlightjs.org/</a>.
+						<p>You can get more info at <a target="_blank" href="https://highlightjs.org/"
+								target="_blank">https://highlightjs.org/</a>.
 							Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
 							Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
 							ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo,
@@ -232,9 +239,6 @@ export  $initHighlight;
 								2017</a>
 						</blockquote>
 						<script async src="../../../../platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-
-
 						<h3 class="mt-5 mb-3">Video Example</h3>
 						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
 							Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
@@ -249,7 +253,7 @@ export  $initHighlight;
 					</div>
 
 					<nav class="blog-nav nav nav-justified my-5">
-						<a class="nav-link-prev nav-item nav-link rounded-left" href="index-2.html">Previous<i
+						<a class="nav-link-prev nav-item nav-link rounded-left" href="index.html">Previous<i
 								class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
 						<a class="nav-link-next nav-item nav-link rounded-right" href="blog-list.html">Next<i
 								class="arrow-next fas fa-long-arrow-alt-right"></i></a>
@@ -288,7 +292,7 @@ export  $initHighlight;
 						</script>
 						<noscript>
 							Please enable JavaScript to view the
-							<a href="https://disqus.com/?ref_noscript" rel="nofollow">
+							<a target="_blank" href="https://disqus.com/?ref_noscript" rel="nofollow">
 								comments powered by Disqus.
 							</a>
 						</noscript>
@@ -305,8 +309,8 @@ export  $initHighlight;
 					<p>You can use this section to promote your side projects etc. Lorem ipsum dolor sit amet, consectetuer
 						adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. </p>
 					<figure class="promo-figure">
-						<a href="https://made4dev.com/" target="_blank"><img class="img-fluid" src="assets/images/promo-banner.jpg"
-								alt="image"></a>
+						<a target="_blank" href="https://made4dev.com/" target="_blank"><img class="img-fluid"
+								src="./assets/images/promo-banner.jpg" alt="image"></a>
 					</figure>
 				</div>
 				<!--//container-->
@@ -314,59 +318,32 @@ export  $initHighlight;
 			<!--//promo-section-->
 
 			<footer class="footer text-center py-4">
-				<small class="copyright">Template Copyright &copy; <a href="https://themes.3rdwavemedia.com/"
-						target="_blank">3rd Wave Media</a></small>
+				<small class="copyright">&copy; Copyright 2019. Designed by <a
+						href="https://stackoverflow.com/users/9207553/mohammad-ayoub-khan">Muhammad Ayoub</a> </small>
 			</footer>
 
 		</div>
 		<!--//main-wrapper-->
 
 
-		<!-- *****CONFIGURE STYLE (REMOVE ON YOUR PRODUCTION SITE)****** -->
-		<div id="config-panel" class="config-panel d-none d-lg-block">
-			<div class="panel-inner">
-				<a id="config-trigger" class="config-trigger config-panel-hide text-center" href="#"><i
-						class="fas fa-cog mx-auto" data-fa-transform="down-6"></i></a>
-				<h5 class="panel-title">Choose Colour</h5>
-				<ul id="color-options" class="list-inline mb-0">
-					<li class="theme-1 active list-inline-item"><a data-style="assets/css/theme-1.css" href="#"></a></li>
-					<li class="theme-2  list-inline-item"><a data-style="assets/css/theme-2.css" href="#"></a></li>
-					<li class="theme-3  list-inline-item"><a data-style="assets/css/theme-3.css" href="#"></a></li>
-					<li class="theme-4  list-inline-item"><a data-style="assets/css/theme-4.css" href="#"></a></li>
-					<li class="theme-5  list-inline-item"><a data-style="assets/css/theme-5.css" href="#"></a></li>
-					<li class="theme-6  list-inline-item"><a data-style="assets/css/theme-6.css" href="#"></a></li>
-					<li class="theme-7  list-inline-item"><a data-style="assets/css/theme-7.css" href="#"></a></li>
-					<li class="theme-8  list-inline-item"><a data-style="assets/css/theme-8.css" href="#"></a></li>
-					<li class="theme-9  list-inline-item"><a data-style="assets/css/theme-9.css" href="#"></a></li>
-					<li class="theme-10  list-inline-item"><a data-style="assets/css/theme-10.css" href="#"></a></li>
-				</ul>
-				<a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>
-			</div>
-			<!--//panel-inner-->
-		</div>
-		<!--//configure-panel-->
+
 
 
 
 		<!-- Javascript -->
-		<script src="assets/plugins/jquery-3.4.1.min.js"></script>
-		<script src="assets/plugins/popper.min.js"></script>
-		<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+		<script src="./assets/plugins/jquery-3.4.1.min.js"></script>
+		<script src="./assets/plugins/popper.min.js"></script>
+		<script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
 		<!-- Page Specific JS -->
 		<script src="../../../../cdnjs.cloudflare.com/ajax/libs/highlight.js/9.14.2/highlight.min.js"></script>
 
 		<!-- Custom JS -->
-		<script src="assets/js/blog.js"></script>
+		<script src="./assets/js/blog.js"></script>
 
 		<!-- Dark Mode -->
-		<script src="assets/plugins/js-cookie.min.js"></script>
-		<script src="assets/js/dark-mode.js"></script>
-
-		<!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
-		<script src="assets/js/demo/style-switcher.js"></script>
-
-
+		<script src="./assets/plugins/js-cookie.min.js"></script>
+		<script src="./assets/js/dark-mode.js"></script>
 	</body>
 
 </html>
