--- a/index.html
+++ b/index.html
@@ -2,28 +2,29 @@
 <html lang="en">
 
 	<head>
-		<title>DevCard - Bootstrap 4 vCard &amp; Portfolio Template For Developers</title>
+		<title>Muhammad Ayoub - Personal Portfolio</title>
 
 		<!-- Meta -->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="DevCard Bootstrap 4 Template">
-		<meta name="author" content="Xiaoying Riley at 3rd Wave Media">
-		<link rel="shortcut icon" href="favicon.ico">
+		<meta name="description"
+			content="Hi, Em Muhammad Ayoub self-learned programmer from Faisalabad. I'm a professional web developer specialised in frontend development for complex scalable web apps.
+I am having the expertise and high bug solving skills and could easily get on board with an ongoing project. I have experience in web development languages and frameworks.">
+		<meta name="author" content="Muhammad Ayoub Khan">
+		<link rel="shortcut icon" href="./favicon.ico">
 
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
 
 		<!-- FontAwesome JS -->
-		<script defer src="assets/fontawesome/js/all.js"></script>
+		<script defer src="./assets/fontawesome/js/all.js"></script>
 
 		<!-- Owl Stylesheets -->
-		<link rel="stylesheet" href="assets/plugins/owlcarousel/assets/owl.carousel.min.css">
-		<link rel="stylesheet" href="assets/plugins/owlcarousel/assets/owl.theme.default.min.css">
-
+		<link rel="stylesheet" href="./assets/plugins/owlcarousel/owl.carousel.min.css">
 		<!-- Theme CSS -->
-		<link id="theme-style" rel="stylesheet" href="assets/css/theme-1.css">
+		<link id="theme-style" rel="stylesheet" href="./assets/css/theme-3.css">
+		<link rel="stylesheet" href="./assets/css/theme-new.css">
 
 	</head>
 
@@ -31,7 +32,7 @@
 
 		<header class="header text-center">
 			<div class="force-overflow">
-				<h1 class="blog-name pt-lg-4 mb-0"><a href="index-2.html">Simon Doe</a></h1>
+				<h1 class="blog-name pt-lg-4 mb-0"><a href="index.html">M. Ayoub</a></h1>
 
 				<nav class="navbar navbar-expand-lg navbar-dark">
 
@@ -42,17 +43,22 @@
 
 					<div id="navigation" class="collapse navbar-collapse flex-column">
 						<div class="profile-section pt-3 pt-lg-0">
-							<img class="profile-image mb-3 rounded-circle mx-auto" src="assets/images/profile.png" alt="image">
+							<img class="profile-image mb-3 rounded-circle mx-auto" src="./assets/images/profile.png" alt="image">
 
-							<div class="bio mb-3">Hi, my name is Simon Doe and I'm a senior software engineer. Welcome to my personal
+							<div class="bio mb-3">Hi, my name is Muhammad Ayoub and I'm a Javascript Engineer. Welcome to my personal
 								website!</div>
 							<!--//bio-->
 							<ul class="social-list list-inline py-2 mx-auto">
-								<li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-								<li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-								<li class="list-inline-item"><a href="#"><i class="fab fa-github-alt fa-fw"></i></a></li>
-								<li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow fa-fw"></i></a></li>
-								<li class="list-inline-item"><a href="#"><i class="fab fa-codepen fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://twitter.com/AyoubKhan558"><i
+											class="fab fa-twitter fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/ayoubkhan558/"><i
+											class="fab fa-linkedin-in fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://github.com/ayoubkhan558"><i
+											class="fab fa-github-alt fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://stackoverflow.com/users/9207553/mohammad-ayoub-khan
+"><i class="fab fa-stack-overflow fa-fw"></i></a></li>
+								<li class="list-inline-item"><a target="_blank" href="https://codepen.io/ayoubkhan558"><i
+											class="fab fa-codepen fa-fw"></i></a></li>
 							</ul>
 							<!--//social-list-->
 							<hr>
@@ -61,7 +67,7 @@
 
 						<ul class="navbar-nav flex-column text-left">
 							<li class="nav-item active">
-								<a class="nav-link" href="index-2.html"><i class="fas fa-user fa-fw mr-2"></i>About Me<span
+								<a class="nav-link" href="index.html"><i class="fas fa-user fa-fw mr-2"></i>About Me<span
 										class="sr-only">(current)</span></a>
 							</li>
 							<li class="nav-item">
@@ -123,12 +129,20 @@
 					<div class="profile-teaser media flex-column flex-lg-row">
 
 						<div class="media-body">
-							<h2 class="name font-weight-bold mb-1">Simon Doe</h2>
-							<div class="tagline mb-3">Senior Software Engineer</div>
-							<div class="bio mb-4">I'm a software engineer specialised in frontend and backend development for complex
-								scalable web apps. I write about software development on <a class="link-on-bg" href="blog-home.html">my
-									blog</a>. Want to know how I may help your project? Check out my project <a class="link-on-bg"
-									href="projects.html">portfolio</a> and <a class="link-on-bg" href="resume.html">online resume</a>.
+							<h2 class="name font-weight-bold mb-1">Muhammad Ayoub</h2>
+							<div class="tagline mb-3">Javascript Engineer</div>
+							<div class="bio mb-4">
+								Hi, Em <strong>Muhammad Ayoub</strong> self-learned <i>programmer</i> from <strong>Faisalabad</strong>.
+								I'm a
+								<strong>professional web developer</strong> specialised in <strong>frontend development</strong> for
+								complex scalable web apps. <br>
+								I am having the expertise and high bug solving skills and could easily get on board with an ongoing
+								project.
+
+								I have experience in web development <i>languages</i> and <i>frameworks</i>.
+								<br> <br> Want to know how I may help your project? Check out my project <a class="link-on-bg"
+									href="projects.html">portfolio</a> and <a class="link-on-bg" href="resume.html">online
+								</a>.
 							</div>
 							<!--//bio-->
 							<div class="mb-4">
@@ -140,7 +154,7 @@
 							</div>
 						</div>
 						<!--//media-body-->
-						<img class="profile-image mb-3 mb-lg-0 ml-lg-5 mr-md-0" src="assets/images/profile-lg.jpg" alt="">
+						<img class="profile-image mb-3 mb-lg-0 ml-lg-5 mr-md-0" src="./assets/images/profile-lg.jpg" alt="">
 					</div>
 				</div>
 			</section>
@@ -277,7 +291,7 @@
 							<!--//quote-holder-->
 							<div class="source-holder">
 								<div class="source-profile">
-									<img src="assets/images/clients/profile-1.png" alt="image" />
+									<img src="./assets/images/clients/profile-1.png" alt="image" />
 								</div>
 								<div class="meta">
 									<div class="name">Brandon James</div>
@@ -297,7 +311,7 @@
 							<!--//quote-holder-->
 							<div class="source-holder">
 								<div class="source-profile">
-									<img src="assets/images/clients/profile-2.png" alt="image" />
+									<img src="./assets/images/clients/profile-2.png" alt="image" />
 								</div>
 								<div class="meta">
 									<div class="name">Kate Sanders</div>
@@ -317,7 +331,7 @@
 							<!--//quote-holder-->
 							<div class="source-holder">
 								<div class="source-profile">
-									<img src="assets/images/clients/profile-3.png" alt="image" />
+									<img src="./assets/images/clients/profile-3.png" alt="image" />
 								</div>
 								<div class="meta">
 									<div class="name">James Lee</div>
@@ -337,7 +351,7 @@
 							<!--//quote-holder-->
 							<div class="source-holder">
 								<div class="source-profile">
-									<img src="assets/images/clients/profile-4.png" alt="image" />
+									<img src="./assets/images/clients/profile-4.png" alt="image" />
 								</div>
 								<div class="meta">
 									<div class="name">James Lee</div>
@@ -357,7 +371,7 @@
 							<!--//quote-holder-->
 							<div class="source-holder">
 								<div class="source-profile">
-									<img src="assets/images/clients/profile-5.png" alt="image" />
+									<img src="./assets/images/clients/profile-5.png" alt="image" />
 								</div>
 								<div class="meta">
 									<div class="name">Olivia White</div>
@@ -377,7 +391,7 @@
 							<!--//quote-holder-->
 							<div class="source-holder">
 								<div class="source-profile">
-									<img src="assets/images/clients/profile-6.png" alt="image" />
+									<img src="./assets/images/clients/profile-6.png" alt="image" />
 								</div>
 								<div class="meta">
 									<div class="name">Samuel Reyes</div>
@@ -405,7 +419,7 @@
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
-										<img src="assets/images/project/project-1.jpg" class="card-img" alt="image">
+										<img src="./assets/images/project/project-1.jpg" class="card-img" alt="image">
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
@@ -433,7 +447,7 @@
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
-										<img src="assets/images/project/project-2.jpg" class="card-img" alt="image">
+										<img src="./assets/images/project/project-2.jpg" class="card-img" alt="image">
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
@@ -461,7 +475,7 @@
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
-										<img src="assets/images/project/project-3.jpg" class="card-img" alt="image">
+										<img src="./assets/images/project/project-3.jpg" class="card-img" alt="image">
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
@@ -489,7 +503,7 @@
 							<div class="card project-card">
 								<div class="row no-gutters">
 									<div class="col-lg-4 card-img-holder">
-										<img src="assets/images/project/project-4.jpg" class="card-img" alt="image">
+										<img src="./assets/images/project/project-4.jpg" class="card-img" alt="image">
 									</div>
 									<div class="col-lg-8">
 										<div class="card-body">
@@ -533,7 +547,7 @@
 					<div class="row">
 						<div class="col-md-4 mb-5">
 							<div class="card blog-post-card">
-								<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-1.jpg" alt="image">
+								<img class="card-img-top" src="./assets/images/blog/blog-post-thumb-card-1.jpg" alt="image">
 								<div class="card-body">
 									<h5 class="card-title"><a class="theme-link" href="blog-post.html">Top 3 JavaScript Frameworks</a>
 									</h5>
@@ -551,7 +565,7 @@
 						<!--//col-->
 						<div class="col-md-4 mb-5">
 							<div class="card blog-post-card">
-								<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-2.jpg" alt="image">
+								<img class="card-img-top" src="./assets/images/blog/blog-post-thumb-card-2.jpg" alt="image">
 								<div class="card-body">
 									<h5 class="card-title"><a class="theme-link" href="blog-post.html">About Remote Working</a></h5>
 									<p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula
@@ -568,7 +582,7 @@
 						<!--//col-->
 						<div class="col-md-4 mb-5">
 							<div class="card blog-post-card">
-								<img class="card-img-top" src="assets/images/blog/blog-post-thumb-card-3.jpg" alt="image">
+								<img class="card-img-top" src="./assets/images/blog/blog-post-thumb-card-3.jpg" alt="image">
 								<div class="card-body">
 									<h5 class="card-title"><a class="theme-link" href="blog-post.html">A Guide to Becoming a Full-Stack
 											Developer</a></h5>
@@ -594,50 +608,22 @@
 			<!--//latest-blog-section-->
 
 			<footer class="footer text-center py-4">
-				<small class="copyright">Template Copyright &copy; <a href="https://themes.3rdwavemedia.com/"
-						target="_blank">3rd Wave Media</a></small>
+				<small class="copyright">&copy; Copyright 2019. Designed by <a
+						href="https://stackoverflow.com/users/9207553/mohammad-ayoub-khan">Muhammad Ayoub</a> </small>
 			</footer>
 
 		</div>
 		<!--//main-wrapper-->
 
-		<!-- *****CONFIGURE STYLE (REMOVE ON YOUR PRODUCTION SITE)****** -->
-		<div id="config-panel" class="config-panel d-none d-lg-block">
-			<div class="panel-inner">
-				<a id="config-trigger" class="config-trigger config-panel-hide text-center" href="#"><i
-						class="fas fa-cog mx-auto" data-fa-transform="down-6"></i></a>
-				<h5 class="panel-title">Choose Colour</h5>
-				<ul id="color-options" class="list-inline mb-0">
-					<li class="theme-1 active list-inline-item"><a data-style="assets/css/theme-1.css" href="#"></a></li>
-					<li class="theme-2  list-inline-item"><a data-style="assets/css/theme-2.css" href="#"></a></li>
-					<li class="theme-3  list-inline-item"><a data-style="assets/css/theme-3.css" href="#"></a></li>
-					<li class="theme-4  list-inline-item"><a data-style="assets/css/theme-4.css" href="#"></a></li>
-					<li class="theme-5  list-inline-item"><a data-style="assets/css/theme-5.css" href="#"></a></li>
-					<li class="theme-6  list-inline-item"><a data-style="assets/css/theme-6.css" href="#"></a></li>
-					<li class="theme-7  list-inline-item"><a data-style="assets/css/theme-7.css" href="#"></a></li>
-					<li class="theme-8  list-inline-item"><a data-style="assets/css/theme-8.css" href="#"></a></li>
-					<li class="theme-9  list-inline-item"><a data-style="assets/css/theme-9.css" href="#"></a></li>
-					<li class="theme-10  list-inline-item"><a data-style="assets/css/theme-10.css" href="#"></a></li>
-				</ul>
-				<a id="config-close" class="close" href="#"><i class="fa fa-times-circle"></i></a>
-			</div>
-			<!--//panel-inner-->
-		</div>
-		<!--//configure-panel-->
 
 		<!-- Javascript -->
-		<script src="assets/plugins/jquery-3.4.1.min.js"></script>
-		<script src="assets/plugins/popper.min.js"></script>
-		<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-		<script src="assets/plugins/owlcarousel/owl.carousel.min.js"></script>
-		<script src="assets/js/testimonials.js"></script>
-
-		<!-- Style Switcher (REMOVE ON YOUR PRODUCTION SITE) -->
-		<script src="assets/js/demo/style-switcher.js"></script>
-
-		<!-- Dark Mode -->
-		<script src="assets/plugins/js-cookie.min.js"></script>
-		<script src="assets/js/dark-mode.js"></script>
+		<script src="./assets/plugins/jquery-3.4.1.min.js"></script>
+		<script src="./assets/plugins/popper.min.js"></script>
+		<script src="./assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+		<script src="./assets/plugins/owlcarousel/owl.carousel.min.js"></script>
+		<script src="./assets/js/testimonials.js"></script> <!-- Dark Mode -->
+		<script src="./assets/plugins/js-cookie.min.js"></script>
+		<script src="./assets/js/dark-mode.js"></script>
 
 	</body>
 
